syntax = "proto3";

package order;

service OrderService {
    // Place an order
    rpc PlaceOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
    string customer_name = 1;
    string product = 2;
    int32 quantity = 3;
}

message OrderResponse {
    string status = 1;
    string message = 2;
}
